Adicionado Mapas e Localização do usuário!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BusMap</string>
     <string name="btn_search_lines">Buscar Linhas</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_bus_map">Map</string>
 </resources>
